# seebelow

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-venv.txt  setup.py
config/: an-an-force.yml  osc-pose-controller.yml  pan-pan.yml
rpal/: auto_exp.sh
rpal/algorithms/: active_area_search.py  bayesian_optimization.py  cluster_store.py  gp.py  grid.py  gui.py  search.py  voxel.py
rpal/config/: an-an-force.yml  hybrid-force-controller.yml  joint-position-controller.yml  osc-pose-controller-delta.yml  osc-pose-controller.yml  pan-pan-force.yml  realsense_camera_calib.yaml
rpal/experiment_logs/: 3_8_24.txt
rpal/meshes/: tumor_crescent.stl
rpal/scripts/: CMakeLists.txt  an-an-force.yml  camera_calibration.py  camera_params.json  collect_trajectories.py  devices.py  eval_dataset.py  exploration_policy.py  exploration_policy_curved.py  exploration_policy_curved_with_force.py  force_sensor_pb2.py  force_sensor_zmq.py  generate_ground_truth.py  hybrid-force-controller.yml  image_buffer.cc  matplot_heatmap.py  osc-pose-controller.yml  plot_reconstruction.py  preprocess.py  realtime_scanning.py  robot-palpation-config.csv  robot_phantom_calibration.py  scene_calibration.py  simple_palpation_policy.py  test.py  test_checkerboard.py  test_clustering.py  test_devices.py  test_force_sensor.py  test_grid.py  test_hybrid_force_control.py  test_mesh.py  test_patches.py  test_pcd_segmentation.py  test_realsense.py  test_rs_o3d.py  tumor_big.stl  (+11 more)
scripts/: camera_calibration.py  eval_dataset.py  exploration_policy_curved_with_force.py  generate_ground_truth.py
(+63 files in other folders)
