[tool.poetry]
name = "rpal"
version = "0.1.0"
description = "3D reconstruction of tumors using robot palpation"
authors = ["Raghava Uppuluri <raghava.upp13@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rpal" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
open3d-cpu = "^0.17.0"
numpy = "^1.26.1"
imgui = {extras = ["full"], version = "^2.0.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
